fix: replace usage of deprecated URL constructor (#214)
Replaces the deprecated new URL(String) constructor with URI-based
construction in ResourceUtils.isUrl(String),
ResourceUtils.extractJarFileURL(URL), and GzipClient.get(String).

Review turned up a real behavior regression in the initial replacement:
URI.create(...).toURL() does not have the same failure mode as the
deprecated constructor it replaces. It throws IllegalArgumentException
for a non-absolute URI (a plain relative path, or a syntactically
invalid string like one containing an unescaped space or illegal
character), which is not a MalformedURLException. Both isUrl and
extractJarFileURL only caught MalformedURLException, so those inputs
would propagate an uncaught exception instead of the graceful
false/fallback behavior the original code had.

This mattered most for extractJarFileURL, whose fallback branch exists
specifically to handle a jar URL with no protocol on the nested path,
its own comment cites "jar:C:/mypath/myjar.jar" as the motivating
example, i.e. a raw file system path. Any jar deployed from a path
containing a space (a common macOS home directory or Windows Program
Files path) would have thrown instead of resolving.

Fixed by routing both methods through this file's existing toURI(String)
helper, which already percent-encodes spaces before parsing, and
widening the catch clauses to cover URISyntaxException and
IllegalArgumentException alongside MalformedURLException.

Added parameterized tests to ResourceUtilsTest for both methods,
covering absolute URLs, the classpath: pseudo prefix, an absolute URL
containing a space, a plain relative path, and genuinely invalid URI
syntax, plus the jar-URL space and missing-protocol fallback cases.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

---------

Co-authored-by: Claude Sonnet 5 <noreply@anthropic.com>